--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,86 @@
-# Ignore environment and configuration files
+# Environment and configuration files
 .env
 .env.local
 config.json
 settings.py
 
-# Ignore build artifacts
-__pycache__/
+# Python artifacts
 *.pyc
 *.pyo
+*.pyd
+__pycache__/
 *.db
 *.sqlite3
-dist/
-node_modules/
-
-# Ignore IDE files
-.vscode/
-.idea/
-
-# Ignore SSH keys and secrets
-*.pem
-.aws/
-.ssh/
-
-# Ignore operating system files
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Ignore logs
 *.log
-logs/
-debug.log
+*.out
+*.pid
+*.swp
+*.swo
 
-# Ignore Python virtual environment
+# Python virtual environment
 .venv/
 env/
 venv/
 
-# Ignore coverage reports
+# Coverage reports
 .coverage
-coverage/
-htmlcov/
-
-# Ignore testing outputs
-.tox/
-.cache/
+.coverage.*
 *.cover
 nosetests.xml
+coverage.xml
 *.test_info
+.tox/
 .pytest_cache/
+.cache/
+htmlcov/
 
-# Ignore frontend dependencies and build files
-/frontend/node_modules/
+# Build and distribution
+dist/
+build/
+*.egg-info/
+
+# Logs and debugging
+logs/
+debug.log
+
+# Node.js artifacts
+node_modules/
+frontend/node_modules/
 frontend/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
+# IDE-specific files
+.idea/
+.idea/**
+*.iml
+*.ipr
+*.iws
+.vscode/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Testing and temporary files
+tmp/
+temp/
+*.tmp
+*.bak
+
+# Docker files
+docker-compose.override.yml
+.dockerignore
+
+# Frontend files
+/frontend/package-lock.json
+/frontend/yarn.lock
+/frontend/public/*.ico
+/frontend/public/*.png
+/frontend/public/*.jpg
+/frontend/public/*.svg
+/frontend/public/*.gif
+/frontend/public/*.webp
+/frontend/public/*.map
