--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@rjsf/core": "^5.24.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "react": "^18.3.1",
