--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
