--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.6
 fastapi-cli==0.0.7
+flake8==7.1.1
 gitdb==4.0.12
 gitdb2==4.0.2
 GitPython==3.0.6
@@ -25,18 +26,21 @@ Jinja2==3.1.5
 jiter==0.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
 numpy==2.2.1
-openai==1.58.1
+openai==1.60.0
 orjson==3.10.13
 owlrl==7.1.2
 packaging==24.2
 pandas==2.2.3
 prettytable==3.12.0
+pycodestyle==2.12.1
 pydantic==2.10.4
 pydantic-extra-types==2.10.1
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
+pyflakes==3.2.0
 Pygments==2.19.1
 pyparsing==3.2.0
 pyshacl==0.29.1
@@ -45,7 +49,8 @@ python-dotenv==1.0.1
 python-multipart==0.0.20
 pytz==2024.2
 PyYAML==6.0.2
-rdflib==7.1.1
+rdflib==7.1.3
+rdflib-jsonld==0.6.2
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.12.0
