--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.1",
     "@rjsf/core": "^5.24.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
